# django-template

./: .editorconfig  .gitignore  .gitlab-ci-example.yml  .ruff.toml  Makefile  Pipfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflow-templates/: ci.yml
package/: Dockerfile  entrypoint.sh
package/deploy/: Dockerfile
package/testing/: Dockerfile
packaging/deploy/: Dockerfile  entrypoint.sh
packaging/testing/: Dockerfile  entrypoint.sh
src/: .env.example  tox.ini
src/config/: asgi.py  settings.py  urls.py  wsgi.py
