[project]
name = ""
version = ""
description = ""
authors = [
    {name = "beemensameh", email = "41084077+beemensameh@users.noreply.github.com"},
]
dependencies = [
    "Django~=4.2",
    "djangorestframework~=3.14",
    "django-environ~=0.11",
    "psycopg~=3.1",
    "gunicorn~=21.2",
    "uWSGI~=2.0",
    "django-extensions~=3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "docutils~=0.20",
    "isort~=5.12",
    "pytest-django~=4.5",
    "django-debug-toolbar~=4.2",
    "flake8~=6.1",
    "black~=23.9",
    "drf-spectacular~=0.26",
    "drf-spectacular-sidecar~=2023.10",
]

[tool.black]
line-length = 79
target-version = ['py311']
force-exclude = 'migrations'
