[project]
name = "project_name"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "beemensameh", email = "41084077+beemensameh@users.noreply.github.com"},
]
dependencies = [
    "Django~=4.2",
    "djangorestframework~=3.15",
    "django-environ~=0.11",
    "psycopg~=3.1",
    "gunicorn~=21.2",
    "uWSGI~=2.0",
    "django-extensions~=3.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "docutils~=0.21",
    "pytest-django~=4.8",
    "django-debug-toolbar~=4.4",
    "drf-spectacular~=0.27",
    "drf-spectacular-sidecar~=2023.12",
    "ruff~=0.4",
]

[tool.black]
line-length = 79
target-version = ['py312']
force-exclude = 'migrations'
